--- a/appsettings.json
+++ b/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Cardos_Dan_Lab8Context": "Server=(localdb)\\mssqllocaldb;Database=Cardos_Dan_Lab8Context-c17596df-d86a-4f39-a4a1-101e6f0f8329;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
